Prevents button wrapping

--- a/style.css
+++ b/style.css
@@ -63,3 +63,7 @@
         height:50%;
     }
 }
+
+#links {
+    white-space: nowrap;
+}
